// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OldSchoolMenuLink renders correctly 1`] = `
<div
  className="active"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
</div>
`;

exports[`OldSchoolMenuLink renders correctly 2`] = `
<div
  className=""
>
  <a
    href="/recipe"
    onClick={[Function]}
  >
    Home
  </a>
</div>
`;
